shimlang/test_scripts/errors/add_int_and_str.stderr
 1 | 1 + "test";
       ^
Error: Can't add Integer(1) and String(Word(0))
